; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx1/extr_clock.c_fclk_get_rate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx1/extr_clock.c_fclk_get_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }

@CCM_CSCR = common dso_local global i32 0, align 4
@CCM_CSCR_PRESC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk*)* @fclk_get_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @fclk_get_rate(%struct.clk* %0) #0 {
  %2 = alloca %struct.clk*, align 8
  %3 = alloca i64, align 8
  store %struct.clk* %0, %struct.clk** %2, align 8
  %4 = load %struct.clk*, %struct.clk** %2, align 8
  %5 = getelementptr inbounds %struct.clk, %struct.clk* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @clk_get_rate(i32 %6)
  store i64 %7, i64* %3, align 8
  %8 = load i32, i32* @CCM_CSCR, align 4
  %9 = call i32 @__raw_readl(i32 %8)
  %10 = load i32, i32* @CCM_CSCR_PRESC, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i64, i64* %3, align 8
  %15 = udiv i64 %14, 2
  store i64 %15, i64* %3, align 8
  br label %16

16:                                               ; preds = %13, %1
  %17 = load i64, i64* %3, align 8
  ret i64 %17
}

declare dso_local i64 @clk_get_rate(i32) #1

declare dso_local i32 @__raw_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
